--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,12 @@
 		</dependency>
 		
 		
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.12.1</version>
+		</dependency>
+		
+		
 	</dependencies>
 </project>
